# carboncore

./: .dockerignore  .env  .env.example  .gitignore  .gitignore copy  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  env.example  fix.sh  frontend.Dockerfile  k6_budget.js  lighthouserc.js  package.json  playwright.config.ts  pnpm-lock.yaml  slack.txt  worker.Dockerfile
.github/workflows/: a11y.yml  ci.yaml  (+10 more)
backend/: Dockerfile  celerybeat-schedule  celeryconfig.py  entrypoint.sh  pyproject.toml  requirements.txt  test.db
backend/.github/workflows/: ci.yaml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20240613_ledger_rls.py  20240617_plugin_table.py  20240701_event_log.py  20240702_supplier_table.py  20240703_plugin_auto.py  6aa5b5672a47_baseline_schema.py  8759a98249e4_baseline_schema.py  9d42b6ef8b3e_event_type_lookup.py
backend/app/: __init__.py  database.py  main.py  models.py  otel.py  plugin_manifest.py  registry.py  secret.py
backend/app/core/: deps.py  ledger.py  logging.py  otel.py  ratelimit.py  settings.py
backend/app/core/plan_parsers/: __init__.py  cdk.py  pulumi.py  terraform.py
backend/app/ingestion/: grid_ingest.py  sku_crawler.py
backend/app/logging/: dev.json
backend/app/middleware/: secure_headers.py
backend/app/routers/: __init__.py  analytics.py  carbon.py  events.py  gdpr.py  health.py  skus.py  tokens.py
backend/app/schemas/: plugins.py
backend/app/services/: _test_stub.py  carbon_feed.py  catalogue_sync.py  provider_stub.py
backend/app/tasks/: __init__.py  jobs.py  loader.py  worker.py
backend/plugins/budget/: manifest.py  pyproject.toml
backend/plugins/budget/budget/: alert.py  forecast.py  models.py  views.py
backend/plugins/carboncomply/: manifest.py  pyproject.toml
backend/plugins/carboncomply/carboncomply/: alert.py  views.py
backend/plugins/carboncomply/carboncomply.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/plugins/core/: manifest.py  routes.py  tasks.py
backend/plugins/ecolabel/: manifest.py  pyproject.toml
backend/plugins/ecolabel/ecolabel/: hooks.py  views.py
backend/plugins/ecoshift/: manifest.py  pyproject.toml
backend/plugins/ecoshift/ecoshift/: autopilot.py  views.py
backend/plugins/ecoshift/ecoshift.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/plugins/edge_router/: manifest.py  pyproject.toml
backend/plugins/edge_router/edge_router/: views.py
backend/plugins/greendev/: manifest.py  pyproject.toml
backend/plugins/greendev/greendev/: views.py
backend/plugins/iac_advisor/: manifest.py  pyproject.toml
backend/plugins/iac_advisor/iac_advisor/: autopilot.py  plan_parser.py  views.py
backend/plugins/iac_advisor/tests/: test_parser.py
backend/plugins/offset_sync/: manifest.py  pyproject.toml
backend/plugins/pulse/: manifest.py  pyproject.toml
backend/plugins/pulse/pulse/: alert.py  models.py  scanner.py  views.py
backend/scripts/: gen_registry.py
backend/tests/: conftest.py  dummy_plugin.py  test_api.py  test_carbon.py  test_feeders.py  test_plugin_tasks.py  test_rate_limit.py  test_secure_headers.py  test_tokens.py
backend/worker/: loader.py
carboncore-ui/: env.d.ts
cf-worker/: worker.js  wrangler.toml
console/: .npmrc  next.config.js  package.json  pnpm-lock.yaml  turbo.json
docker/: agent.yaml  api.Dockerfile  entrypoint.sh  ingestor.Dockerfile  worker.Dockerfile
docs/: ADDING_PLUGINS.md  ecolabel.md  frontend.md  metrics.md
e2e/: global-setup.ts  scheduler-dnd.spec.ts
frontend/: .env.local  eslint.config.mjs  gen-registry.mjs  jsconfig.json  middleware.ts  next.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  providers.tsx  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
ia_advisor/: main.py
infra/: README.md  quickstart.sh
load/: ledger-sse.js
schema/: plugin.schema.json
scripts/: build_sdk.sh  check_flags.py  gen_openapi_types.sh  gen_registry.py  sample_pr_plan.json  seed-dev.ts  seed_demo.py  seed_demo.sh  smoke-build.sh  smoke.sh
web/: .eslintrc.json  .gitignore  .prettierrc  Dockerfile  gen-registry.mjs  gen-registry.ts  jsconfig.json  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
(+465 files in other folders)
