[tool.poetry]
name = "carboncore-backend"
version = "0.1.0"
description = ""
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlmodel = "^0.0.16"
asyncpg = "^0.29"
aiocache = "^0.12"
httpx = "^0.27"
celery = {extras = ["redis"], version = "^5.5.3"}
python-dotenv = "^1.0"
fastapi-pagination = "^0.13.1"
tenacity = "^9.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
slowapi = "^0.1.9"
pydantic-settings = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
