[tool.poetry]
name = "carboncore-backend"
version = "0.1.0-beta.1"
package-mode = false
description = ""
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
fastapi-pagination = "^0.12.12"
slowapi = "^0.1.9"
tenacity = "^8.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
celery = {extras = ["redis"], version = "^5.3.6"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.2"
greenlet = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
anyio = "^4.3.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
alembic = "^1.16.1"
