[tool.poetry]
name         = "carboncore-backend"
version      = "0.1.0-beta.1"
description  = "CarbonCore FastAPI backend – Sprints 3–5 complete"
package-mode = false
authors      = ["You <you@example.com>"]

# ───────────────────────────── Runtime ─────────────────────────────
[tool.poetry.dependencies]
python  = "^3.12"
qrcode = "^7.4"
reportlab = "^4.1"
boto3 = "^1.34"


# FastAPI stack
fastapi  = "^0.111.0"
uvicorn  = { extras = ["standard"], version = "^0.29.0" }
sqlmodel = "^0.0.16"
asyncpg  = "^0.29.0"
httpx    = "^0.27.0"
aiohttp = "^3.9.5"
requests = "^2.32.3"

# API helpers
fastapi-pagination = "^0.12.12"
fastapi-limiter    = "^0.1.6"
slowapi            = "^0.1.9"
tenacity           = "^8.3.0"

# Auth & crypto
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# Background tasks
celery = { extras = ["redis"], version = "^5.3.6" }

# Settings / env
python-dotenv     = "^1.0.1"
pydantic-settings = "^2.3.2"
secure = "^1.0.1"
greenlet = "^3.2.2"

# Caching
redis = { extras = ["hiredis"], version = "^5.0.4" }

aiosqlite = "^0.20"

# Logging
structlog = "^25.4.0"


# Security headers middleware (Starlette‐compatible)

# ───────────────────────────── Observability ─────────────────────────────
prometheus-client                    = "^0.20.0"
prometheus-fastapi-instrumentator    = "^6.0.0"
opentelemetry-api                    = "^1.24.0"
opentelemetry-sdk                    = "^1.24.0"
opentelemetry-exporter-otlp          = "^1.24.0"
opentelemetry-instrumentation-fastapi = { version = "0.48b0", allow-prereleases = true }
opentelemetry-instrumentation-httpx  = "^0.48b0"
opentelemetry-instrumentation-sqlalchemy = "^0.48b0"
opentelemetry-instrumentation-celery = "^0.48b0"

# ───────────────────────────── Dev / CI ────────────────────────────
bcrypt = "<4"
pandas = "^2.3.0"
numpy = "^2.3.0"
pytz = "^2025.2"
pydantic = ">=2.7,<3"
aioredis = "^2.0.1"
[tool.poetry.group.dev.dependencies]
pytest               = "^8.2.0"
pytest-asyncio       = "0.23.6"
anyio                = "^4.3.0"
trio                 = "^0.30.0"
ruff                 = "^0.4.4"
mypy                 = "^1.10.0"
types-requests       = "^2.31.0.20240218"
types-python-dateutil = "^2.9.0.20240316"
alembic              = "^1.16.1"

# ───────────────────────────── Ruff  ───────────────────────────────
fakeredis = {extras = ["aioredis"], version = "^2.29.0"}
[tool.ruff]
line-length   = 100
extend-select = ["I"]

# ───────────────────────────── Mypy ────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict         = true
files          = ["app"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["app*", "backend*", "worker*", "plugins*", "alembic*"]


[project]
name    = "carboncore-backend"
version = "0.1.0-beta.1"          # keep whatever version you like

[build-system]
requires      = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
